--- a/FormWebcamJs/FormWebcamJs.WebApp/Views/Shared/Error.cshtml
+++ b/FormWebcamJs/FormWebcamJs.WebApp/Views/Shared/Error.cshtml
@@ -1,25 +1,33 @@
 ﻿@model FormWebcamJs.Domain.Models.Erro.ErrorViewModel
-@{
-    ViewData["Title"] = "Error";
-}
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+<div class="row mt-5">
+    <div class="col-md-6">
+        <img src="~/images/error.png" alt="robot-error" style="width:100%;"/>
+    </div>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+    <div class="col-md-6">
+        <h1 class="text-dark">Erro.</h1>
+        <h2 class="text-dark">Ocorreu um erro durante o processamento da sua solicitação.</h2>
+
+        <br />
+
+        @if (Model.ShowRequestId)
+        {
+            <p>
+                <strong>Solicitação ID:</strong> <code>@Model.RequestId</code>
+            </p>
+        }
+
+        <h3>Suporte:</h3>
+
+        <p class="text-justify">
+            Para mais informações entre em contato com nosso suporte.
+        </p>
+        <p class="text-justify">
+            <strong>Email:</strong> suporte@gmail.com <br />
+            <strong>Telefone 1:</strong> (32) 3222-5555 <br />
+            <strong>Telefone 2:</strong> (32) 3284-9374 <br />
+        </p>
+    </div>
+</div>
