--- a/FormWebcamJs/FormWebcamJs.WebApp/Views/Pessoa/Index.cshtml
+++ b/FormWebcamJs/FormWebcamJs.WebApp/Views/Pessoa/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<FormWebcamJs.Domain.Models.Pessoa.PessoaViewModel>
 
-<h2>Lista de Pessoas</h2>
+<h2 class="float-left">Lista de Pessoas</h2>
 
-<p>
-    <a asp-controller="Pessoa" asp-action="Create">Inserir pessoa</a>
+<p class="float-right">
+    <a asp-controller="Pessoa" asp-action="Create" class="btn btn-primary">Inserir pessoa</a>
 </p>
 
-<table class="table">
+<table class="table mt-3">
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.ImagemBase64String)</th>
@@ -14,7 +14,7 @@
             <th>@Html.DisplayNameFor(model => model.Nome)</th>
             <th>@Html.DisplayNameFor(model => model.DataNascimento)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
-            <th>@Html.DisplayNameFor(model => model.Senha)</th>
+            <th>Ações</th>
         </tr>
     </thead>
 
@@ -29,7 +29,10 @@
                     <td style="vertical-align: middle;">@Html.DisplayFor(modelItem => item.Nome)</td>
                     <td style="vertical-align: middle;">@Html.DisplayFor(modelItem => item.DataNascimento)</td>
                     <td style="vertical-align: middle;">@Html.DisplayFor(modelItem => item.Email)</td>
-                    <td style="vertical-align: middle;">@Html.DisplayFor(modelItem => item.Senha)</td>
+                    <td style="vertical-align: middle;">
+                        @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-info" })
+                        @Html.ActionLink("Apagar", "Delete", new { id=item.Id }, new { @class = "btn btn-danger" })
+                    </td>
                 </tr>
             }
         }
