--- a/FormWebcamJs/FormWebcamJs.WebApp/wwwroot/css/site.css
+++ b/FormWebcamJs/FormWebcamJs.WebApp/wwwroot/css/site.css
@@ -69,3 +69,35 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Input file personalizado */
+.upload-btn-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    width: 100%;
+    height: 245px;
+    font-size: 100%;
+}
+
+.btnUpload {
+    border: 2px dashed #000000;
+    color: #000000;
+    background-color: #EEEEEE;
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 100%;
+    font-weight: bold;
+    width: 100%;
+    height: 245px;
+}
+
+.upload-btn-wrapper input[type=file] {
+    font-size: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    width: 100%;
+    height: 320px;
+}
