--- a/src/POC.Webcam.js.Application/Views/_ViewImports.cshtml
+++ b/src/POC.Webcam.js.Application/Views/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using POC.Webcam.js
-@using POC.Webcam.js.Domain.Models.Pessoa
-@using POC.Webcam.js.Domain.Models.Erro
+﻿@using POC.Webcam.js.Application.Models.Error
+@using POC.Webcam.js.Domain.Person.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
