--- a/src/POC.Webcam.js.Application/Views/Pessoa/Create.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Pessoa/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PessoaViewModel
+﻿@model Person
 
 <h2>Inserir Pessoa</h2>
 <hr />
@@ -11,15 +11,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="form-group">
-                        <label asp-for="Nome" class="control-label"></label>
-                        <input asp-for="Nome" class="form-control" type="text" required maxlength="50" />
-                        <span asp-validation-for="Nome" class="text-danger"></span>
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" type="text" required maxlength="50" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="DataNascimento" class="control-label"></label>
-                        <input asp-for="DataNascimento" class="form-control" type="date" required />
-                        <span asp-validation-for="DataNascimento" class="text-danger"></span>
+                        <label asp-for="Birth" class="control-label"></label>
+                        <input asp-for="Birth" class="form-control" type="date" required />
+                        <span asp-validation-for="Birth" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
@@ -29,15 +29,15 @@
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="Senha" class="control-label"></label>
-                        <input asp-for="Senha" class="form-control" type="password" required maxlength="100" />
-                        <span asp-validation-for="Senha" class="text-danger"></span>
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" type="password" required maxlength="100" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="ImagemBase64String" class="control-label"></label>
-                        <input asp-for="ImagemBase64String" class="form-control" type="text" readonly required id="imagemBase64StringField"/>
-                        <span asp-validation-for="ImagemBase64String" class="text-danger"></span>
+                        <label asp-for="Image" class="control-label"></label>
+                        <input asp-for="Image" class="form-control" type="text" readonly required id="imagemBase64StringField"/>
+                        <span asp-validation-for="Image" class="text-danger"></span>
                     </div>
                 </div>
 
