--- a/src/POC.Webcam.js.Application/Views/Pessoa/Delete.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Pessoa/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model PessoaViewModel
+﻿@model Person
 
 <h1>Apagar Pessoa</h1>
 <hr />
@@ -7,9 +7,9 @@
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="ImagemBase64String" class="control-label"></label>
+                <label asp-for="Image" class="control-label"></label>
                 <br />
-                <img src="data:image/png;base64, @Model.ImagemBase64String" height="200" width="200" style="border-radius:100%;" class="mt-5" alt="Imagem da pessoa" />
+                <img src="data:image/png;base64, @Model.Image" height="200" width="200" style="border-radius:100%;" class="mt-5" alt="Imagem da pessoa" />
             </div>
         </div>
 
@@ -21,14 +21,14 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" readonly />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" readonly />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" class="form-control" readonly />
-                <span asp-validation-for="DataNascimento" class="text-danger"></span>
+                <label asp-for="Birth" class="control-label"></label>
+                <input asp-for="Birth" class="form-control" readonly />
+                <span asp-validation-for="Birth" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
