--- a/src/POC.Webcam.js.Application/Views/Shared/Error.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Shared/Error.cshtml
@@ -1,33 +1,32 @@
 ﻿@model ErrorViewModel
 
-
 <div class="row mt-5">
     <div class="col-md-6">
         <img src="~/images/error.png" alt="robot-error" style="width:100%;"/>
     </div>
 
     <div class="col-md-6">
-        <h1 class="text-dark">Erro.</h1>
-        <h2 class="text-dark">Ocorreu um erro durante o processamento da sua solicitação.</h2>
+        <h1 class="text-dark">Error.</h1>
+        <h2 class="text-dark">An error occurred while processing your request.</h2>
 
         <br />
 
         @if (Model.ShowRequestId)
         {
             <p>
-                <strong>Solicitação ID:</strong> <code>@Model.RequestId</code>
+                <strong>Request Id:</strong> <code>@Model.RequestId</code>
             </p>
         }
 
-        <h3>Suporte:</h3>
+        <h3>Support:</h3>
 
         <p class="text-justify">
-            Para mais informações entre em contato com nosso suporte.
+            For more information, contact our support.
         </p>
         <p class="text-justify">
             <strong>Email:</strong> suporte@gmail.com <br />
-            <strong>Telefone 1:</strong> (32) 3222-5555 <br />
-            <strong>Telefone 2:</strong> (32) 3284-9374 <br />
+            <strong>Telephone 1:</strong> (32) 3222-5555 <br />
+            <strong>Telephone 2:</strong> (32) 3284-9374 <br />
         </p>
     </div>
 </div>
