--- a/src/POC.Webcam.js.Application/Views/Shared/_Layout.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="~/images/icone.png" />
-    <title>Form Webcam.js</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>POC.Webcam.js</title>
+    <link rel="shortcut icon" type="image/png" href="~/images/icon.png" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/toastr/toastr.css" />
@@ -19,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Pessoa" asp-action="Index">Form Webcam.js</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Person" asp-action="Index">POC.Webcam.js</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,6 +28,7 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -35,9 +37,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Lucas Santos
+            &copy; @DateTime.Now.Year - Lucas Santos
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/toastr/toastr.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
