Refatoração do projeto Application

--- a/src/POC.Webcam.js.Application/Views/Shared/_Layout.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <input type="hidden" id="success" value="@TempData["success"]" />
-    <input type="hidden" id="info" value="@TempData["info"]" />
-    <input type="hidden" id="warning" value="@TempData["warning"]" />
-    <input type="hidden" id="error" value="@TempData["error"]" />
+    <input type="hidden" id="toastr-success" value="@TempData["toastr-success"]" />
+    <input type="hidden" id="toastr-info" value="@TempData["toastr-info"]" />
+    <input type="hidden" id="toastr-warning" value="@TempData["toastr-warning"]" />
+    <input type="hidden" id="toastr-error" value="@TempData["toastr-error"]" />
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
