Ajuste em troca de forma de captura da imagem

--- a/src/POC.Webcam.js.Application/Views/Person/Create.cshtml
+++ b/src/POC.Webcam.js.Application/Views/Person/Create.cshtml
@@ -47,7 +47,7 @@
                             <label class="control-label">Profile picture</label>
                             <br />
                             <input type="radio" value="webcam" id="radioWebcam" onclick="showWebcam()" checked> Capture an Image with Webcam<br>
-                            <input type="radio" value="local" id="radioLocal" onclick="showInputFile()"> Choose a local photo<br>
+                            <input type="radio" value="inputFile" id="radioInputFile" onclick="showInputFile()"> Choose a local photo<br>
                             <br />
                         </div>
                     </div>
