Renomeando pasta e ajustando namespaces

--- a/src/POC.Webcam.js.Application/Views/_ViewImports.cshtml
+++ b/src/POC.Webcam.js.Application/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using POC.Webcam.js.Application.Models.Error
-@using POC.Webcam.js.Domain.Person.Entities
+@using POC.Webcam.js.Domain.Persons.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
